--- a/public/assets/frontend/assets/css/styles.css
+++ b/public/assets/frontend/assets/css/styles.css
@@ -3495,5 +3495,7 @@ ol {
     display: block !important;
     margin-left: 30px !important;
     font-size: 14px !important;
+    position: static !important;
+    padding: 0!important;
 
 }
